force-app/main/default/objects/Private_Equity__c/Private_Equity__c.object-meta.xml
<CustomObject>
    <label>Private Equity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Private Equities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>