force-app/main/default/objects/Private_Equity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Private Equities</relationshipLabel>
    <relationshipName>Private_Equities</relationshipName>
    <type>Lookup</type>
</CustomField>