force-app/main/default/objects/Private_Equity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Private Equities</relationshipLabel>
    <relationshipName>Private_Equities</relationshipName>
    <type>Lookup</type>
</CustomField>