force-app/main/default/objects/Private_Equity__c/fields/Date_Approached__c.field-meta.xml
<CustomField>
    <fullName>Date_Approached__c</fullName>
    <label>Date Approached</label>
    <type>Date</type>
</CustomField>