force-app/main/default/objects/Private_Equity__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral</label>
    <referenceTo>Referral__c</referenceTo>
    <relationshipLabel>Private Equities</relationshipLabel>
    <relationshipName>Private_Equities</relationshipName>
    <type>Lookup</type>
</CustomField>