force-app/main/default/objects/Private_Equity__c/fields/Row_Checksum__c.field-meta.xml
<CustomField>
    <fullName>Row_Checksum__c</fullName>
    <label>Row Checksum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>